html elements and some styling

--- a/index.html
+++ b/index.html
@@ -3,9 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Title</title>
+    <link rel="icon" type="image/x-icon" href="img/Flag_of_Washington_favicon.svg.png">
+    <title>Home | Washington State</title>
+    <!--ordered list-->
+    <!--float-->
+    <!--form-->
+    <!--need absolute and relative positioning-->
+    <!--javascript validation-->
 </head>
 <body>
+<header>
+    <img src="img/Flag_of_Washington_512.svg.png" alt="Washington State official seal and flag">
+    <nav class="externalNav">
+        <ul>
+            <li><a href="https://wa.gov/">Official</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Washington_(state)">Wikipedia</a></li>
+            <li><a href="https://stateofwatourism.com/">Tourism</a></li>
+        </ul>
+    </nav>
+    <h1>Washington State</h1>
+    <p>
+        Al-ki
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+             class="bi bi-arrow-left-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5
+             0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147
+              3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"/>
+        </svg>
+        Bye and bye
+    </p>
+    <nav class="internalNav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="olympia.html">Olympia</a></li>
+            <li><a href="seattle.html">Seattle</a></li>
+            <li><a href="spokane.html">Spokane</a></li>
+            <li><a href="info.html">Info</a></li>
+        </ul>
+    </nav>
+</header>
 
+<main>
+    <aside>
+        <table>
+            <caption>Statistics</caption>
+            <tr>
+                <th>Capital</th>
+                <td>Olympia</td>
+            </tr>
+            <tr>
+                <th>Largest city</th>
+                <td>Seattle</td>
+            </tr>
+            <tr>
+                <th>Governor</th>
+                <td>Jay Inslee</td>
+            </tr>
+            <tr>
+                <th>Population</th>
+                <td>7,785,786</td>
+            </tr>
+            <tr>
+                <th>Area</th>
+                <td>71,362 sq. mi.</td>
+            </tr>
+        </table>
+    </aside>
+    <section>
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto autem dicta, eligendi et eum
+            excepturi expedita facilis hic obcaecati quae quaerat quod recusandae repellendus repudiandae sint sunt
+            veritatis voluptate?</p>
+    </section>
+    <section>
+        <article>
+            <h2>Article 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                repellat, sequi similique!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                repellat, sequi similique!</p>
+        </article>
+        <article>
+            <h2>Article 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                repellat, sequi similique!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                repellat, sequi similique!</p>
+        </article>
+    </section>
+
+
+</main>
+
+<footer>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="olympia.html">Olympia</a></li>
+            <li><a href="seattle.html">Seattle</a></li>
+            <li><a href="spokane.html">Spokane</a></li>
+            <li><a href="info.html">Info</a></li>
+        </ul>
+    </nav>
+    <p>copyright info</p>
+</footer>
 </body>
 </html>
