adding city content

--- a/seattle.html
+++ b/seattle.html
@@ -2,10 +2,108 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="city-style.css">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/Flag_of_Washington_favicon.svg.png">
+    <title>Seattle</title>
 </head>
 <body>
+<header>
+    <div class="hero">
+        <img src="" alt="">
+        <div class="title">
+            <h1></h1>
+            <p>
 
+            </p>
+        </div>
+    </div>
+    <div class="internalNav">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="olympia.html">Olympia</a></li>
+                <li><a href="seattle.html">Seattle</a></li>
+                <li><a href="spokane.html">Spokane</a></li>
+                <li><a href="info.html">Info</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<main>
+    <div class="content">
+        <section>
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto autem dicta, eligendi et eum
+                excepturi expedita facilis hic obcaecati quae quaerat quod recusandae repellendus repudiandae sint sunt
+                veritatis voluptate?</p>
+        </section>
+        <section>
+            <article>
+                <h2>Article 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                    repellat, sequi similique!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                    repellat, sequi similique!</p>
+            </article>
+            <article>
+                <h2>Article 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                    repellat, sequi similique!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti eligendi id velit voluptatum.
+                    Amet architecto blanditiis eaque eligendi eveniet expedita nam nemo placeat praesentium quos reiciendis
+                    repellat, sequi similique!</p>
+            </article>
+        </section>
+    </div>
+    <aside>
+        <table>
+            <caption>Statistics</caption>
+            <tr>
+                <th>Region</th>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Incorporated</th>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Avg. Income Rank</th>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Population</th>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Classification</th>
+                <td></td>
+            </tr>
+        </table>
+    </aside>
+</main>
+
+<footer>
+    <div class="internalNav">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="olympia.html">Olympia</a></li>
+                <li><a href="seattle.html">Seattle</a></li>
+                <li><a href="spokane.html">Spokane</a></li>
+                <li><a href="info.html">Info</a></li>
+            </ul>
+        </nav>
+    </div>
+    <p>
+        Copyright © 2023 Marcus Lull
+        <br>
+        All rights reserved.
+    </p>
+</footer>
 </body>
 </html>
