--- a/info.html
+++ b/info.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="info-style.css">
+    <link rel="icon" type="image/x-icon" href="img/Flag_of_Washington_favicon.svg.png">
     <script src="javascript.js"></script>
-    <title>Title</title>
+    <title>Info</title>
 </head>
 <body>
     <section>
