adding olympia - content and style

--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,7 @@
     <section>
         <h2>References</h2>
         <p><a href="https://commons.wikimedia.org/wiki/File:Flag_of_Washington.svg">WA Secretary of State</a>, Public domain, via Wikimedia Commons</p>
+        <p><a href="https://www.pexels.com/@john-callery-3749962/">John Callery</a></p>
     </section>
 
 </body>
