--- a/olympia.html
+++ b/olympia.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="city-style.css">
     <link rel="icon" type="image/x-icon" href="img/Flag_of_Washington_favicon.svg.png">
-    <title>Olympia</title>
+    <title>Olympia  |  Washington State</title>
 </head>
 <body>
 <header>
-    <div class="hero">
-        <img src="" alt="">
+    <div class="hero" id="olympia-hero">
+        <img src="img/olympia-min.jpeg" alt="A View of the Washington State Capitol">
         <div class="title">
-            <h1></h1>
+            <h1>Olympia</h1>
             <p>
-
+                S.P.I.R.I.T. <br> <span id="titleSpan">Service, People, Integrity, Results, Innovation, Team</span>
             </p>
         </div>
     </div>
@@ -65,23 +66,23 @@
             <caption>Statistics</caption>
             <tr>
                 <th>Region</th>
-                <td></td>
+                <td>South Puget Sound</td>
             </tr>
             <tr>
                 <th>Incorporated</th>
-                <td></td>
+                <td>1859</td>
             </tr>
             <tr>
                 <th>Avg. Income Rank</th>
-                <td></td>
+                <td>69th percentile</td>
             </tr>
             <tr>
                 <th>Population</th>
-                <td></td>
+                <td>55,626</td>
             </tr>
             <tr>
                 <th>Classification</th>
-                <td></td>
+                <td>urban-suburban</td>
             </tr>
         </table>
     </aside>
