adding Seattle and Spokane

--- a/info.html
+++ b/info.html
@@ -13,9 +13,11 @@
 
     </section>
     <section>
-        <h2>References</h2>
+        <h2>Site References</h2>
         <p><a href="https://commons.wikimedia.org/wiki/File:Flag_of_Washington.svg">WA Secretary of State</a>, Public domain, via Wikimedia Commons</p>
         <p><a href="https://www.pexels.com/@john-callery-3749962/">John Callery</a></p>
+        <p><a href="https://www.pexels.com/@chaitaastic/">Chait Goli</a></p>
+        <p><a href="https://www.pexels.com/@tom-shamberger-5308978/">Tom Shamberger</a></p>
     </section>
 
 </body>
