--- a/spokane.html
+++ b/spokane.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="city-style.css">
     <link rel="icon" type="image/x-icon" href="img/Flag_of_Washington_favicon.svg.png">
-    <title>Spokane</title>
+    <title>Spokane  |  Washington State</title>
 </head>
 <body>
 <header>
-    <div class="hero">
-        <img src="" alt="">
+    <div class="hero" id="spokane-hero">
+        <img src="img/spokane-min.jpg" alt="A Clock Tower Near Green trees Beside a River">
         <div class="title">
-            <h1></h1>
+            <h1>Spokane</h1>
             <p>
-
+                Lilac City
             </p>
         </div>
     </div>
@@ -65,23 +66,23 @@
             <caption>Statistics</caption>
             <tr>
                 <th>Region</th>
-                <td></td>
+                <td>Inland Northwest</td>
             </tr>
             <tr>
                 <th>Incorporated</th>
-                <td></td>
+                <td>1881</td>
             </tr>
             <tr>
                 <th>Avg. Income Rank</th>
-                <td></td>
+                <td>70th percentile</td>
             </tr>
             <tr>
                 <th>Population</th>
-                <td></td>
+                <td>228,989</td>
             </tr>
             <tr>
                 <th>Classification</th>
-                <td></td>
+                <td>urban - suburban</td>
             </tr>
         </table>
     </aside>
