--- a/seattle.html
+++ b/seattle.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="city-style.css">
     <link rel="icon" type="image/x-icon" href="img/Flag_of_Washington_favicon.svg.png">
-    <title>Seattle</title>
+    <title>Seattle  |  Washington State</title>
 </head>
 <body>
 <header>
-    <div class="hero">
-        <img src="" alt="">
+    <div class="hero" id="seattle-hero">
+        <img src="img/seattle-min.jpg" alt="Photo of Seattle Skyline">
         <div class="title">
-            <h1></h1>
+            <h1>Seattle</h1>
             <p>
-
+                The Emerald City
             </p>
         </div>
     </div>
@@ -65,23 +66,23 @@
             <caption>Statistics</caption>
             <tr>
                 <th>Region</th>
-                <td></td>
+                <td>Puget Sound</td>
             </tr>
             <tr>
                 <th>Incorporated</th>
-                <td></td>
+                <td>1869</td>
             </tr>
             <tr>
                 <th>Avg. Income Rank</th>
-                <td></td>
+                <td>100th percentile</td>
             </tr>
             <tr>
                 <th>Population</th>
-                <td></td>
+                <td>4,102,400 (metro)</td>
             </tr>
             <tr>
                 <th>Classification</th>
-                <td></td>
+                <td>Urban</td>
             </tr>
         </table>
     </aside>
